--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,27 +6,26 @@
 
   .header-section {
     display: flex;
-    justify-content: center;
-
-    flex-direction: column;
+    background-color: red;
     width: 60%;
 
-    @media {
-      flex-direction: column;
-    }
+
+
   }
 
-  .header-div {
-
+  .that-div {
     border-bottom: 1px dashed @silver;
-    display: flex;
+    justify-content: center;
     flex-direction: column;
-
-
-    h2 {
-      padding: 1.8rem;
-    }
+    width: 65%;
+    margin: auto;
+    background-color: green;
   }
+
+  // h2 {
+  //   padding: 1.8rem;
+  // }
+
 
 
   .content-section {
@@ -38,6 +37,7 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
+      color: greenyellow;
     }
 
     padding-left: 1%;
@@ -81,6 +81,7 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
     }
   }
 
