--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,3 +10,13 @@
     height: @height;
     font-size: 1.8rem;
 }
+
+@mobile: ~"screen and (max-width:500px)";
+
+@media @mobile {
+
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
