--- a/less/variables.less
+++ b/less/variables.less
@@ -11,3 +11,13 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+@mobile: ~"screen and (max-width:500px)";
+
+@media @mobile {
+
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
